# adafruit-bluefruit-protocol-rs

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
examples/stm32f4-event-printer/: Cargo.toml  README.md
examples/stm32f4-event-printer/.cargo/: config.toml
examples/stm32f4-event-printer/src/: adafruit_bluefruit_le_uart_friend.rs  main.rs
src/: accelerometer_event.rs  button_event.rs  color_event.rs  gyro_event.rs  lib.rs  location_event.rs  magnetometer_event.rs  quaternion_event.rs
src/bluefruit_protocol/: accelerometer_event.rs  button_event.rs  color_event.rs  gyro_event.rs  location_event.rs  magnetometer_event.rs  mod.rs  quaternion_event.rs
